# shelly_smartplug_exporter

./: Cargo.toml  Dockerfile  README.md
src/: main.rs  shelly_service.rs
