[package]
name = "shelly_smartplug_exporter"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
log = "0.4.22"
colog = "1.3.0"
chrono = "0.4.39"
clap = { version = "4.5.23", features = ["derive"] }
actix-web = { version = "4.9.0", features = ["rustls"] }
once_cell = "1.20.2"

[dev-dependencies]
mockito = "1.6.1"
test-context = "0.3.0"